--- a/_posts/2024-11-27-iOS-week13.md
+++ b/_posts/2024-11-27-iOS-week13.md
@@ -153,3 +153,138 @@ present(playerController, animated: true) {
 
 - 모달이 화면에 완전히 나타난 후에 present 메서드의 후행 클로저가 호출되므로 playerController가 화면에 나타난 후에 player.play()가 호출됨
 - 사용자에게 더 나은 경험을 제공할 수 있음
+
+### Docs
+
+#### Overview
+
+VideoViewController는 UIViewController를 상속받아 비디오 파일을 재생하는 기능을 가진 클래스입니다. 이 클래스는 AVKit 프레임워크를 사용하여 비디오 콘텐츠를 표시합니다.
+
+#### Methods
+
+@IBAction func playVideo(_ sender: UIButton)
+Description: 버튼 클릭 시 호출되는 액션 메서드입니다. 이 메서드는 앱의 번들에서 비디오 파일을 찾아 재생하는 기능을 수행합니다.
+Parameters:
+sender: UIButton: 클릭된 버튼을 나타내는 매개변수입니다.
+Functionality:
+비디오 파일 경로 찾기:
+Bundle.main.path(forResource: "APT", ofType: "mp4")를 사용하여 비디오 파일의 경로를 찾습니다. 파일이 존재하지 않으면 메서드를 종료합니다.
+비디오 URL 생성:
+URL(filePath: videoPath)를 사용하여 비디오 파일의 URL을 생성합니다.
+AVPlayer 생성:
+AVPlayer(url: videoURL)를 사용하여 비디오를 재생할 플레이어를 생성합니다.
+AVPlayerViewController 생성:
+AVPlayerViewController 인스턴스를 생성하고, 생성한 플레이어를 해당 컨트롤러에 할당합니다.
+비디오 재생:
+present(playerController, animated: true) { player.play() }를 사용하여 비디오 플레이어 화면을 표시하고, 애니메이션이 완료된 후 비디오 재생을 시작합니다.
+override func viewDidLoad()
+Description: 뷰가 메모리에 로드될 때 호출되는 메서드입니다. 현재는 기본 구현만 포함되어 있으며, 추가적인 초기화 작업이 필요할 경우 이곳에 작성할 수 있습니다.
+
+#### Usage Example
+
+이 클래스는 UIViewController의 서브클래스로 사용되며, 스토리보드에서 버튼을 클릭하면 playVideo 메서드가 호출되어 비디오가 재생됩니다. 비디오 파일은 앱의 번들에 포함되어 있어야 하며, 파일 이름은 "APT.mp4"입니다.
+
+## Web Scene
+
+![week13-5](/assets/img/post/24-11-27/5.png)
+
+- iOS WebView
+
+### WebViewController
+
+```swift
+import UIKit
+import WebKit
+
+class WebViewController: UIViewController {
+    @IBOutlet weak var webView: WKWebView!
+
+    @IBAction func goNaver(_ sender: UIButton) {
+        // URL 생성 (Guard Let 옵셔널 바인딩0)
+        guard let url = URL(string: "https://m.naver.com") else {
+            return
+        }
+
+        // URLRequest 객체 생성
+        let request = URLRequest(url: url)
+        // WKWebView에 요청 로드
+        webView.load(request)
+    }
+}
+```
+
+```swift
+override func viewDidLoad() {
+    super.viewDidLoad()
+
+    guard let url = URL(string: "https://panther3652.github.io") else {
+        return
+    }
+
+    let request = URLRequest(url: url)
+    webView.load(request)
+}
+```
+
+```swift
+import UIKit
+import WebKit
+
+class WebViewController: UIViewController {
+    @IBOutlet weak var webView: WKWebView!
+
+    override func viewDidLoad() {
+        super.viewDidLoad()
+        loadWebView(with: "https://panther3652.github.io")
+    }
+
+    @IBAction func goNaver(_ sender: UIButton) {
+        loadWebView(with: "https://google.co.kr")
+    }
+
+    private func loadWebView(with urlString: String) {
+        guard let url = URL(string: urlString) else {
+            print("Invalid URL: \(urlString)")
+            return
+        }
+
+        let request = URLRequest(url: url)
+        webView.load(request)
+    }
+}
+```
+
+![week13-6](/assets/img/post/24-11-27/6.png)
+
+### Docs
+
+#### Overview
+
+WebViewController는 UIViewController를 상속받아 웹 페이지를 로드하고 표시하는 기능을 가진 클래스입니다. 이 클래스는 WKWebView를 사용하여 웹 콘텐츠를 표시합니다.
+
+#### Properties
+
+@IBOutlet weak var webView: WKWebView!
+Description: WKWebView 인스턴스를 연결하는 아울렛입니다. 이 웹 뷰는 웹 페이지를 로드하고 표시하는 데 사용됩니다.
+
+#### Methods
+
+override func viewDidLoad()
+Description: 뷰가 메모리에 로드될 때 호출되는 메서드입니다. 이 메서드에서는 초기 웹 페이지를 로드하기 위해 loadWebView(with:) 메서드를 호출합니다.
+Usage: loadWebView(with: "https://panther3652.github.io")를 호출하여 초기 웹 페이지를 로드합니다.
+@IBAction func goNaver(_ sender: UIButton)
+Description: 버튼 클릭 시 호출되는 액션 메서드입니다. 이 메서드는 Naver 웹사이트를 로드하기 위해 loadWebView(with:) 메서드를 호출합니다.
+Parameters:
+sender: UIButton: 클릭된 버튼을 나타내는 매개변수입니다.
+Usage: loadWebView(with: "https://google.co.kr")를 호출하여 Naver 웹사이트를 로드합니다.
+private func loadWebView(with urlString: String)
+Description: 주어진 URL 문자열을 사용하여 웹 페이지를 로드하는 메서드입니다. URL이 유효하지 않은 경우 오류 메시지를 출력합니다.
+Parameters:
+urlString: String: 로드할 웹 페이지의 URL 문자열입니다.
+Usage:
+URL 문자열을 URL 객체로 변환하고, 유효한 경우 URLRequest를 생성하여 webView에 로드합니다.
+유효하지 않은 URL일 경우, 콘솔에 "Invalid URL: (urlString)" 메시지를 출력합니다.
+
+#### Usage Example
+
+이 클래스는 UIViewController의 서브클래스로 사용되며, 스토리보드에서 WKWebView와 연결된 아울렛을 통해 웹 페이지를 표시합니다. 사용자가 버튼을 클릭하면 다른 웹 페이지로 전환됩니다.
