--- a/_posts/2025-03-05-iOS-3-week1.md
+++ b/_posts/2025-03-05-iOS-3-week1.md
@@ -115,15 +115,12 @@ Q4: 컨테이너와 가상머신의 차이점은 무엇인가요?
 더 많은 리소스 소비
 하드웨어 수준의 격리
 
-
 컨테이너:
 
 호스트 OS의 커널을 공유
 가볍고 빠른 시작
 애플리케이션과 종속성만 포함
 Docker, Kubernetes 등으로 관리
-
-
 
 Q5: CI/CD란 무엇인가요?
 답변: Continuous Integration/Continuous Deployment의 약자로:
@@ -222,37 +219,39 @@ Storyboard 개요: Storyboard는 iOS 앱의 UI를 시각적으로 설계할 수 
 
 코드 개요: UIKit을 사용하여 프로그래밍적으로 UI를 구성할 수 있습니다. 이 방법은 더 많은 유연성을 제공합니다.
 단계별 가이드:
-    1. Xcode에서 새로운 프로젝트를 생성합니다.
-    2. ViewController.swift 파일을 열고, viewDidLoad() 메서드에서 UI 요소를 코드로 생성합니다.
-    3. 예를 들어, UILabel을 생성하고 화면에 추가하는 코드는 다음과 같습니다:
 
-    ```swift
-    let label = UILabel()
-    label.text = "Hello, World!"
-    label.frame = CGRect(x: 20, y: 50, width: 200, height: 50)
-    self.view.addSubview(label)
-    ```
+1. Xcode에서 새로운 프로젝트를 생성합니다.
+2. ViewController.swift 파일을 열고, viewDidLoad() 메서드에서 UI 요소를 코드로 생성합니다.
+3. 예를 들어, UILabel을 생성하고 화면에 추가하는 코드는 다음과 같습니다:
 
-    4. 앱을 빌드하고 실행하여 UI가 제대로 표시되는지 확인합니다.
+```swift
+let label = UILabel()
+label.text = "Hello, World!"
+label.frame = CGRect(x: 20, y: 50, width: 200, height: 50)
+self.view.addSubview(label)
+```
+
+4. 앱을 빌드하고 실행하여 UI가 제대로 표시되는지 확인합니다.
 
 ### SwiftUI를 사용한 iOS 앱 만들기
 
 SwiftUI 개요: SwiftUI는 선언적 방식으로 UI를 구성할 수 있는 새로운 프레임워크입니다. 코드가 간결하고, 실시간 미리보기를 지원합니다.
 단계별 가이드:
-    1. Xcode에서 새로운 SwiftUI 프로젝트를 생성합니다.
-    2. ContentView.swift 파일을 열고, UI 요소를 선언적으로 작성합니다.
-    3. 예를 들어, Text 요소를 추가하는 코드는 다음과 같습니다:
 
-    ```swift
-    struct ContentView: View {
-        var body: some View {
-            Text("Hello, World!")
-                .padding()
-        }
+1. Xcode에서 새로운 SwiftUI 프로젝트를 생성합니다.
+2. ContentView.swift 파일을 열고, UI 요소를 선언적으로 작성합니다.
+3. 예를 들어, Text 요소를 추가하는 코드는 다음과 같습니다:
+
+```swift
+struct ContentView: View {
+    var body: some View {
+        Text("Hello, World!")
+            .padding()
     }
-    ```
+}
+```
 
-    4. 앱을 빌드하고 실행하여 UI가 제대로 표시되는지 확인합니다.
+4. 앱을 빌드하고 실행하여 UI가 제대로 표시되는지 확인합니다.
 
 ### 장단점 비교
 
@@ -260,3 +259,44 @@ SwiftUI 개요: SwiftUI는 선언적 방식으로 UI를 구성할 수 있는 새
 |Storyboard|- 시각적으로 UI를 설계할 수 있어 직관적임.\n- UI 요소 간의 관계를 쉽게 이해할 수 있음.\n- 빠른 프로토타입 제작이 가능함.|- 대규모 프로젝트에서 merge conflict 발생 가능성\n- 코드와 UI가 분리되어 있어 유지보수가 어려움|
 |코드|- 유연성과 재사용성이 높음\n- UI의 동작을 코드로 직접 제어 가능|- 코드 작성이 복잡해질 수 있음\n- UI 변경 시 코드 수정이 필요함|
 |SwiftUI|- 선언적 문법으로 UI를 쉽게 구성 가능\n- 상태 관리가 용이하여 동적 UI 구현에 적합|- iOS 13 이상에서만 사용 가능\n- UIKit에 비해 학습 곡선이 있을 수 있음|
+
+## Swift Docs
+
+### Nil-Coalescing Operator
+
+Swift의 Nil-Coalescing Operator(??)는 옵셔널 값이 nil일 경우에 대체할 값을 제공하는 데 사용됩니다. 이 연산자는 코드의 가독성을 높이고, 옵셔널을 안전하게 처리할 수 있도록 도와줍니다.
+
+#### 사용 이유
+
+1. 가독성 향상: ?? 연산자를 사용하면 조건문을 사용하지 않고도 옵셔널 값을 쉽게 처리할 수 있습니다.
+2. 안전성: 옵셔널이 nil일 때 기본값을 제공함으로써 런타임 오류를 방지할 수 있습니다.
+
+#### 예제
+
+```swift
+let optionalString: String? = nil
+let defaultString = "기본값"
+
+// Nil-Coalescing Operator를 사용하여 optionalString이 nil일 경우 defaultString을 사용
+let result = optionalString ?? defaultString
+
+print(result) // 출력: 기본값
+```
+
+## 실습
+
+### 이름 10번 출력
+
+![week1-1](/assets/img/post/25-03-05/1.png)
+
+```swift
+for _ in 0...9 {
+    print("KCKIM")
+}
+```
+
+### 영화 진흥 위원회 Open API JSON
+
+![week1-2](/assets/img/post/25-03-05/2.png)
+
+![week1-3](/assets/img/post/25-03-05/3.png)
