--- a/_posts/2025-03-15-iOS-3-week2.md
+++ b/_posts/2025-03-15-iOS-3-week2.md
@@ -510,7 +510,14 @@ print("BMI:\(bmi), 판정:\(body)")
 ### Guard 문
 
 - 표현식이 False로 판단될 경우에 수행될 Else 절을 반드시 포함해야 함
-- guard 표현식 else { False 실행 코드 <코드 블록 빠져나갈 구문> } True 실행 코드
+
+```swift
+guard 표현식 else { 
+    False 실행 코드 
+    코드 블록 빠져나갈 구문 
+} True 실행 코드
+```
+
 - 특정 조건에 맞지 않을 경우에 현재 함수나 반복문에서 빠져 나갈 수 있도록 하는 조기 출구 (Early Exit) 전략 제공
 
 ### Switch-Case 문
