--- a/_posts/2025-03-19-iOS-3-week3.md
+++ b/_posts/2025-03-19-iOS-3-week3.md
@@ -90,4 +90,26 @@ tags: [college, ios, swift]
 | 배포 준비     | ✔️              |                | ✔️              |
 | 피드백 수집   |                | ✔️              | ✔️              |
 
-### 
+### View Life Cycle
+
+![week3-1](/assets/img/post/25-03-19/1.png)
+
+```swift
+override func viewDidLoad() {
+    // viewDidLoad는 뷰 컨트롤러의 뷰가 메모리에 로드된 후 호출되는 메서드입니다.
+    super.viewDidLoad() // 부모 클래스의 viewDidLoad 메서드를 호출하여 기본 동작을 수행합니다.
+    print("viewDidLoad") // 뷰가 로드되었음을 콘솔에 출력합니다.
+}
+
+override func viewWillAppear(_ animated: Bool) {
+    // viewWillAppear는 뷰가 화면에 나타나기 직전에 호출되는 메서드입니다.
+    print("viewWillAppear") // 뷰가 나타나기 전에 호출되었음을 콘솔에 출력합니다.
+}
+
+override func viewDidAppear(_ animated: Bool) {
+    // viewDidAppear는 뷰가 화면에 나타난 후 호출되는 메서드입니다.
+    print("viewDidAppear") // 뷰가 나타난 후 호출되었음을 콘솔에 출력합니다.
+}
+```
+
+![week3-2](/assets/img/post/25-03-19/2.png)
