--- a/_posts/2025-03-19-iOS-3-week3.md
+++ b/_posts/2025-03-19-iOS-3-week3.md
@@ -113,3 +113,55 @@ override func viewDidAppear(_ animated: Bool) {
 ```
 
 ![week3-2](/assets/img/post/25-03-19/2.png)
+
+### App Life Cycle
+
+- 앱은 실행 모드와 상태를 가짐
+- Not Running
+  - 앱이 아직 실행되지 않았거나 시스템에 의해 종료된 상태
+- Foreground Mode
+  - Active: 앱이 전경에 있고 이벤트를 받고 있음. 일반적으로 사용자와 상호작용하는 동안 앱은 이 상태에 있음.
+  - Inactive: 앱이 전경에 있지만 이벤트를 받고 있지 않음
+- Background Mode
+  - Running: 앱이 백그라운드에 있지만 여전히 코드를 실행. 사용자가 다른 앱으로 전환하거나 홈 화면으로 돌아갔을 때 앱은 일시적으로 이 상태에 머물게 됨.
+  - Suspend: 앱이 백그라운드에 있지만 코드를 실행하지 않음. 시스템은 앱을 이 상태로 자동으로 전환하며 필요에 따라 메모리를 회수하기 위해 앱을 종료시킬 수 있음.
+
+### View
+
+- UI의 기본 구성 요소
+- 모든 뷰는 UIKit의 UIView 클래스의 자식 클래스
+- 앱의 UI를 구성하는 방법을 제공하며 사용자의 터치 이벤트를 처리하고 뷰의 내용을 그리는 방법을 제어하는 등의 작업 수행
+- 뷰 계층 (View Hierarchy)
+  - 하나의 뷰는 여러 개의 하위 뷰를 가질 수 있고 각 하위 뷰는 부모 뷰에 추가됨.
+  - 뷰 계층을 통해 뷰 간의 위치 관계와 그리기 순서를 결정
+  - 보통 부모 뷰에 추가된 뷰는 부모 뷰의 영역 내에서만 그려짐
+
+![week3-3](/assets/img/post/25-03-19/3.png)
+
+#### UIWindow
+
+- 앱 UI의 액자 (배경)에 해당
+- class UIWindow : UIView
+- 모든 앱은 하나 이상의 윈도우를 가지고 뷰 계층의 가장 상위에 위치하며 뷰 컨트롤러의 뷰와 그 하위 뷰들을 포함
+- 일반적으로 앱의 시작 지점에 생성되며 앱의 매인 화면을 그리는 데 사용되는 뷰 컨트롤러를 Root View Controller로 설정
+- 주요 역할
+  - 뷰 컨트롤러의 뷰와 그 하위 뷰들을 포함하고 그것들을 화면에 렌더링
+  - 사용자로부터의 이벤트를 받아서 적절한 뷰나 뷰 컨트롤러로 전달
+
+#### Container View
+
+- 여러 개의 뷰 컨트롤러를 포함하고 그 사이를 전환하는 역할
+- UINavigationController
+  - 뷰 컨트롤러 간의 계층적 네비게이션을 관리
+  - 리스트에서 항목을 선택하면 상세 화면으로 이동하거나 여러 단계를 거쳐 정보를 입력하는 등의 작업에 사용
+- UITabBarController
+  - 뷰 컨트롤러 간의 평행 네비게이션을 관리
+  - 앱의 주요 기능을 각각의 탭으로 나누고 사용자가 원하는 탭을 선택하여 해당 기능을 이용할 수 있게 하는 데 사용
+- UISplitViewController
+  - 마스터-디테일 인터페이스를 관리
+  - iPad와 같은 큰 화면에서 사용되며 한 화면에 두 개의 관련된 뷰 컨트롤러를 동시에 표시하는 데 사용
+- 컨트롤
+  - 컨트롤들은 정보를 표시하고 사용자에게 반응도 하는 뷰들을 포함
+- 디스플레이 뷰
+  - 시각적인 반응을 제공한다는 점에서 컨트롤과 비슷하지만 사용자 상호작용에 반응하지 않음
+  - UILabel, UIImageView
