--- a/_posts/2025-03-19-iOS-3-week3.md
+++ b/_posts/2025-03-19-iOS-3-week3.md
@@ -165,3 +165,75 @@ override func viewDidAppear(_ animated: Bool) {
 - 디스플레이 뷰
   - 시각적인 반응을 제공한다는 점에서 컨트롤과 비슷하지만 사용자 상호작용에 반응하지 않음
   - UILabel, UIImageView
+
+## Auto Layout
+
+- 모든 기기의 방향까지 고려해서 거의 비슷한 디자인이 나오도록 함.
+
+- 화면 정중앙에 객체를 오토 레이아웃으로 고정하고자 할 때 수직, 수평 Constraints 수치를 0으로 주면 됨.
+
+![week3-4](/assets/img/post/25-03-19/4.png)
+
+![week3-5](/assets/img/post/25-03-19/5.png)
+
+### 오토 레이아웃을 설정하는 방법
+
+| 방법                | 장점                          | 단점                          |
+|---------------------|-------------------------------|-------------------------------|
+| Interface Builder    | 시각적으로 레이아웃을 구성 가능 | 복잡한 레이아웃은 관리가 어려울 수 있음 |
+| 코드로 설정         | 유연성과 재사용성 높음       | 코드가 복잡해질 수 있음      |
+| NSLayoutConstraint   | 세밀한 제어 가능              | 제약 조건이 많아질 경우 가독성 저하 |
+| Stack View           | 간단한 수직/수평 정렬 가능    | 복잡한 레이아웃에는 한계가 있음 |
+| Auto Layout Anchors  | 직관적인 API 제공             | iOS 9 이상에서만 사용 가능   |
+
+## 전광판 앱 개발 계획서서
+
+- 앱 이름: LED 전광판  
+**주요 기능:** 다양한 디자인 옵션, 국제적인 활용 가능, 간편한 UI, 다양한 분야에서 활용 가능  
+**다운로드 수:** 높은 다운로드 수를 기록하고 있는 인기 앱 
+
+### 주요 기능 분석
+
+#### 🎨 디자인 옵션  
+
+- 다양한 색상, 글꼴, 크기, 특수 효과 제공 
+- 사용자 맞춤형 디자인 가능  
+
+#### 🌍 다국어 지원  
+
+- 여러 언어로 출력 가능하여 국제적으로 활용 가능 
+- 다양한 문화적 배경을 가진 사용자에게 적합 
+
+#### 🖥 사용자 인터페이스 
+
+- 직관적이고 간편한 UI 설계  
+- 사용자가 쉽게 접근하고 사용할 수 있도록 구성  
+
+#### 📌 활용 분야  
+
+- 스포츠 경기, 공연, 가게, 공항, 광고 등 다양한 분야에서 활용 가능
+
+### 사용자 피드백  
+
+#### ⭐ 평가 및 리뷰  
+
+- **평균 평점:** 4.6/5 ⭐  
+- 사용자들은 깔끔한 디자인과 광고 부담이 적은 점을 높이 평가  
+
+### 개발 계획  
+
+#### 🛠 기술 스택  
+
+- **iOS 개발:** Swift 및 SwiftUI 사용  
+- **데이터 관리:** Firebase를 통한 데이터 저장 및 사용자 인증  
+
+#### 🚀 기능 구현  
+
+- 사용자 맞춤형 디자인 기능 구현  
+- 다국어 지원 기능 추가  
+- 직관적인 UI/UX 설계  
+
+#### 📢 마케팅 전략  
+
+- 소셜 미디어 및 앱스토어 최적화를 통한 홍보  
+- 사용자 리뷰 및 피드백을 통한 지속적인 개선  
