--- a/_posts/2025-03-19-iOS-3-week3.md
+++ b/_posts/2025-03-19-iOS-3-week3.md
@@ -186,7 +186,7 @@ override func viewDidAppear(_ animated: Bool) {
 | Stack View           | 간단한 수직/수평 정렬 가능    | 복잡한 레이아웃에는 한계가 있음 |
 | Auto Layout Anchors  | 직관적인 API 제공             | iOS 9 이상에서만 사용 가능   |
 
-## 전광판 앱 개발 계획서서
+## 전광판 앱
 
 - 앱 이름: LED 전광판  
 **주요 기능:** 다양한 디자인 옵션, 국제적인 활용 가능, 간편한 UI, 다양한 분야에서 활용 가능  
@@ -236,4 +236,4 @@ override func viewDidAppear(_ animated: Bool) {
 #### 📢 마케팅 전략  
 
 - 소셜 미디어 및 앱스토어 최적화를 통한 홍보  
-- 사용자 리뷰 및 피드백을 통한 지속적인 개선  
+- 사용자 리뷰 및 피드백을 통한 지속적인 개선 
