--- a/_posts/2025-03-26-iOS-week4.md
+++ b/_posts/2025-03-26-iOS-week4.md
@@ -36,6 +36,22 @@ class AppDelegate: UIResponder, UIApplicationDelegate { // AppDelegate 클래스
 }
 ```
 
+### 상세
+
+```swift
+func application(_ application: UIApplication, configurationForConnecting connectingSceneSession: UISceneSession, options: UIScene.ConnectionOptions) -> UISceneConfiguration {
+}
+```
+
+1. 메서드 이름: application(_:configurationForConnecting:options:)
+   이 메서드는 앱이 새로운 씬 세션을 연결할 때 호출됩니다. 씬 세션은 앱의 UI를 나타내며, 여러 씬을 동시에 열 수 있는 기능을 제공합니다.
+2. 매개 변수
+  application: 현재의 UIApplication 인스턴스를 나타냅니다. 이 객체를 통해 앱의 상태나 설정에 접근할 수 있습니다.
+  connectingSceneSession: 연결하려는 씬 세션을 나타내는 UISceneSession 객체입니다. 이 객체는 새로운 씬의 상태와 관련된 정보를 포함하고 있습니다.
+  options: 씬을 연결할 때 사용할 수 있는 추가 옵션을 포함하는 UIScene.ConnectionOptions 객체입니다. 예를 들어, 사용자가 앱을 열 때 전달된 URL이나 사용자 활동 정보가 포함될 수 있습니다.
+3. 반환값
+  이 메서드는 UISceneConfiguration 객체를 반환해야 합니다. 이 객체는 새로운 씬을 설정하는 데 필요한 정보를 포함하고 있습니다. 예를 들어, 어떤 씬을 사용할지, 어떤 delegate를 사용할지 등을 설정할 수 있습니다.
+
 ## SceneDelegate
 
 ```swift
@@ -94,3 +110,27 @@ class ViewController: UIViewController { // ViewController 클래스는 UIViewCo
 }
 ```
 
+## 함수 (Function)
+
+- 리턴값이 없을 경우 선언 시 -> Void 생략 가능
+
+### Parameter vs Argument
+
+- 함수 정의부의 값은 매개변수 (Parameter)
+- 함수 호출 시의 값은 인수 (Argument)
+
+#### 내부 매개변수 (Parameter Name) vs 외부 매개변수 (Parameter Label)
+
+```swift
+func add(first x: Int, second y: Int) -> Int { }
+```
+
+- 외부 내부: 자료형, 외부 내부: 자료형
+- 함수 정의할 때는 내부 매개변수명 사용
+= 함수 호출할 때는 외부 매개변수명 사용
+- 외부 매개변수명 생략 시 내부 매개변수명이 외부 매개변수명까지 겸함
+
+### Method
+
+- 특정 클래스, 구조체, 열거형 내의 함수
+- 함수를 클래스 내에 선언하면 메서드 (Method)
