--- a/_posts/2025-03-26-iOS-week4.md
+++ b/_posts/2025-03-26-iOS-week4.md
@@ -134,3 +134,96 @@ func add(first x: Int, second y: Int) -> Int { }
 
 - 특정 클래스, 구조체, 열거형 내의 함수
 - 함수를 클래스 내에 선언하면 메서드 (Method)
+
+### 함수명
+
+```swift
+func add(first x: Int, second y: Int) -> Int {
+    print(#function) // add(first:second:)
+    return x+y
+}
+print(add(first: 5, second: 10)) // 15
+
+func add(x: Int, y: Int) -> Int {
+    print(#function) // add(x:y:)
+    return x+y
+}
+print(add(x: 10, y: 20)) // 30
+
+func add(_ x: Int, _ y: Int) -> Int {
+    print(#function) // add(_:_:)
+    return x+y
+}
+print(add(1, 2)) // 3
+
+func add(_ x: Int, with y: Int) -> Int {
+    print(#function) // add(_:with:)
+    return x+y
+}
+print(add(5, with: 3)) // 8
+```
+
+- 같은 add함수여도 함수명은 다 다름
+
+- AppDelegate의 application 함수의 함수명
+
+```swift
+func application(_ application: UIApplication, configurationForConnecting connectingSceneSession: UISceneSession, options: UIScene.ConnectionOptions) -> UISceneConfiguration { }
+// application(_:configurationForConnecting:options:)
+```
+
+## 클래스
+
+### 프로퍼티에 초기값을 주는 방법
+
+- 직접 지정
+
+```swift
+class Man {
+    var age: Int = 1
+    var weight: Double = 3.5
+}    
+```
+
+- 옵셔널 변수
+
+```swift
+class Man {
+    var age: Int?
+    var weight: Double!
+}
+```
+
+- Init
+
+```swift
+class Man {
+    var age: Int
+    var weight: Double
+    init() {
+        age = 1
+        double = 3.5
+    }
+}
+```
+
+### Code
+
+```swift
+class Man { // Man이라는 이름의 클래스를 정의합니다.
+    var age: Int = 1 // 나이를 나타내는 Int 타입의 저장 속성을 정의하고 기본값을 1로 설정합니다.
+    var weight: Double = 3.5 // 몸무게를 나타내는 Double 타입의 저장 속성을 정의하고 기본값을 3.5로 설정합니다.
+    
+    func display() { // display라는 이름의 메서드를 정의합니다.
+        print("나이=\(age), 몸무게=\(weight)") // 나이와 몸무게를 출력합니다.
+    }
+    
+    init(age: Int, weight: Double) { // age와 weight를 매개변수로 받는 Designated Initializer를 정의합니다.
+        self.age = age // 매개변수로 받은 age 값을 클래스의 age 속성에 할당합니다.
+        self.weight = weight // 매개변수로 받은 weight 값을 클래스의 weight 속성에 할당합니다.
+    } // Designated Initializer의 끝입니다.
+}
+
+var han = Man(age: 20, weight: 35.5) // Man 클래스의 인스턴스를 생성하고, age를 20, weight를 35.5로 초기화합니다.
+han.display() // han 인스턴스의 display 메서드를 호출하여 나이와 몸무게를 출력합니다.
+```
