--- a/_posts/2025-03-26-iOS-3-week4.md
+++ b/_posts/2025-03-26-iOS-3-week4.md
@@ -227,3 +227,139 @@ class Man { // Man이라는 이름의 클래스를 정의합니다.
 var han = Man(age: 20, weight: 35.5) // Man 클래스의 인스턴스를 생성하고, age를 20, weight를 35.5로 초기화합니다.
 han.display() // han 인스턴스의 display 메서드를 호출하여 나이와 몸무게를 출력합니다.
 ```
+
+```swift
+// Man 클래스를 상속받는 Student 클래스 정의
+class Student : Man {
+    // Student 클래스의 저장 속성 name 정의
+    var name : String
+    
+    // Man 클래스의 display 메서드를 오버라이드하여 Student 클래스에 맞게 구현
+    override func display() {
+        // name, age, weight 속성을 출력
+        print("이름=\(name), 나이=\(age), 몸무게=\(weight)")
+    }
+    
+    // Student 클래스의 designated initializer 정의
+    init(age: Int, weight : Double, name : String){
+        // 저장 속성 name을 초기화
+        self.name = name
+        // 부모 클래스 Man의 designated initializer 호출
+        super.init(age: age, weight: weight) // 이 줄을 안쓰면?
+    } // error: 'super.init' isn't called on all paths before returning from initializer
+} // 자식 클래스에서 designated initializer를 만들면 부모 init() 상속 안됨
+
+// Student 클래스의 인스턴스 lee 생성, age, weight, name을 초기화
+var lee : Student = Student(age: 20, weight: 65.2, name: "홍길동")
+
+// lee 인스턴스의 display 메서드 호출
+lee.display()
+```
+
+## Protocol, Delegate
+
+### Delegate Design Pattern
+
+- 객체 지향 프로그래밍에서 특정 작업을 다른 객체에 위임하는 디자인 패턴
+- 이벤트 처리, 콜백 메커니즘 또는 특정 작업을 수행하는 객체와 그 작업을 요청하는 객체 간의 관계를 정의하는 데 사용
+
+- 예제
+
+```csharp
+// Delegate 정의
+public delegate void TaskDelegate();
+
+// Delegate를 구현하는 클래스
+public class Task {
+    public void PerformTask() {
+        Console.WriteLine("Task is being performed.");
+    }
+}
+
+// Client 클래스
+public class Client {
+    private TaskDelegate taskDelegate;
+
+    public Client(TaskDelegate taskDelegate) {
+        this.taskDelegate = taskDelegate;
+    }
+
+    public void Execute() {
+        taskDelegate(); // 작업을 위임
+    }
+}
+
+// 메인 클래스
+class Program {
+    static void Main(string[] args) {
+        Task task = new Task();
+        Client client = new Client(task.PerformTask);
+        client.Execute(); // "Task is being performed." 출력
+    }
+}
+
+```
+
+```swift
+// Delegate 프로토콜 정의
+protocol TaskDelegate {
+    func performTask()
+}
+
+// Delegate를 구현하는 클래스
+class Task: TaskDelegate {
+    func performTask() {
+        print("Task is being performed.")
+    }
+}
+
+// Client 클래스
+class Client {
+    var delegate: TaskDelegate
+
+    init(delegate: TaskDelegate) {
+        self.delegate = delegate
+    }
+
+    func execute() {
+        delegate.performTask() // 작업을 위임
+    }
+}
+
+// 메인 코드
+let task = Task()
+let client = Client(delegate: task)
+client.execute() // "Task is being performed." 출력
+```
+
+### Protocol
+
+- 특정 클래스와 관련없는 함수(메서드)들의 **선언** 집합
+- 예: Java, C#의 Interface, C++의 abstract base class
+- Protocol Oriented Programming (POP)
+  - 프로토콜 단위로 묶어 표현하고 Extension으로 기본적인 것을 구현해서 단일 상속의 한계를 극복
+
+![week4-1](/assets/img/post/25-03-26/1.png)
+
+- Protocol 내에서 변수를 정의할 때 Getter와 Setter를 정의해야함.
+
+```swift
+protocol Runnable {
+    var x: Int { get set }
+    func run()
+}
+```
+
+![week4-2](/assets/img/post/25-03-26/2.png)
+
+- 프로토콜에 정의된 요구 사항을 준수해야함.
+
+```swift
+class Man : Runnable {
+    var x: Int = 1
+
+    func run() {
+        print("Run")
+    }
+}
+```
