--- a/_posts/2025-03-26-iOS-3-week4.md
+++ b/_posts/2025-03-26-iOS-3-week4.md
@@ -363,3 +363,61 @@ class Man : Runnable {
     }
 }
 ```
+
+## 상속과 프로토콜 동시 사용
+
+```swift
+// Animal 클래스 정의
+class Animal {
+    var name: String
+    
+    init(name: String) {
+        self.name = name
+    }
+    
+    func makeSound() {
+        print("Some generic animal sound")
+    }
+}
+
+// Pet 프로토콜 정의
+protocol Pet {
+    var ownerName: String { get set }
+    func play()
+}
+
+// Dog 클래스 정의
+class Dog: Animal, Pet {
+    var ownerName: String
+    
+    init(name: String, ownerName: String) {
+        self.ownerName = ownerName
+        super.init(name: name)
+    }
+    
+    override func makeSound() {
+        print("Woof!")
+    }
+    
+    func play() {
+        print("\(name) is playing with \(ownerName).")
+    }
+}
+
+// 사용 예
+let myDog = Dog(name: "Buddy", ownerName: "Alice")
+myDog.makeSound() // 출력: Woof!
+myDog.play()      // 출력: Buddy is playing with Alice.
+```
+
+1. Animal 클래스
+  속성: name
+  메서드: makeSound
+
+2. Pet 프로토콜
+  속성: ownerName
+  메서드: play
+
+3. Dog 클래스
+  상속: Animal 클래스
+  채택: Pet 프로토콜
